Update solution-kahns.java